--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20231003015543">
+  <link rel="stylesheet" href="css/style.min.css?_v=20231005231555">
   <title>Enigma ▪ Main page</title>
 </head>
 
@@ -18,11 +18,12 @@
     <section class="encryption">
 
       <article class="encryption__article toimg">
-        <label for="toImg_input-file" class="toimg__img-label encryption__img-label">
-          Select the 'Image'
-          <input id="toImg_input-file"  type="file" accept="image/jpeg, image/jpg, image/png" required
-            class="totext__img-input encryption__img-input">
+        <!-- for="toImg_input-file" -->
+        <label  class="toimg__img-label encryption__img-label" id="toImg_inputFile-area">
+          Select or Drag&Drop the 'Image' 
         </label>
+          <input id="toImg_input-file" type="file" accept="image/jpeg, image/jpg, image/png" required
+            class="totext__img-input encryption__img-input">
         <canvas id="toImg_canvas" class="toimg__canvas encryption__canvas"></canvas>
         <button type="button" id="toImg_canvas-reset" class="toimg__reset-button encryption__reset-button"
           style="display:none">Reset</button>
@@ -33,25 +34,27 @@
         <label id='toImg_text-to-crypto-label' for="input-text" class="toimg__text-label encryption__stage-label"
           style="display: none">
           Введіть текст
-          <input id="toImg_input-text" type="text" maxlength="100" class="toimg__text-input encryption__stage-input">
+          <input id="toImg_input-text" type="text" class="toimg__text-input encryption__stage-input">
         </label>
         <label id='toImg_crypto-key-label' for="input-key" class="toimg__key-label encryption__stage-label"
           style="display: none">
           Введіть ключ або згенеруйте новий
-          <input id="toImg_input-key" type="text" class="toimg__key-input encryption__stage-input" style="display:block">
+          <input id="toImg_input-key" type="text" class="toimg__key-input encryption__stage-input"
+            style="display:block">
           <button id="toImg_key-generate" type="button" class="toimg__key-button encryption__stage-button">Generate
             key</button>
         </label>
-        <button id="toImg_text-encrypt" type="button" class="toimg__encrypt-button encryption__stage-button confirm-button"
-          style="display: none">encrypt</button>
+        <button id="toImg_text-encrypt" type="button"
+          class="toimg__encrypt-button encryption__stage-button confirm-button" style="display: none">encrypt</button>
 
       </article>
       <article class="encryption__article totext">
-        <label for="toText_input-file" class="totext__img-label encryption__img-label">
+        <!-- for="toText_input-file" -->
+        <label  class="totext__img-label encryption__img-label" id="toText_inputFile-area">
           Select the 'Image'
-          <input type="file" accept="image/jpeg, image/jpg, image/png" id="toText_input-file" required
-            class="totext__img-input encryption__img-input">
         </label>
+          <input type="file" accept="image/png" id="toText_input-file" required
+            class="totext__img-input encryption__img-input">
         <canvas id="toText_canvas" class="totext__canvas encryption__canvas"
           style="border: 3px solid #555;width: 200px;height: 200px;object-fit: contain;"></canvas>
         <button type="button" id="toText_canvas-reset" class="totext__reset-button encryption__reset-button"
@@ -68,9 +71,9 @@
       </article>
     </section>
   </main>
-  <footer class="footer"></footer> 
+  <footer class="footer"></footer>
 
-  <script src="js/app.min.js?_v=20231003015543"></script>
+  <script src="js/app.min.js?_v=20231005231555"></script>
   <script>
 
 
